Fix overflow problem

--- a/style.css
+++ b/style.css
@@ -3,20 +3,21 @@
   padding: 0;
 }
 
-html {
-  max-width: 100vw;
-  width: 98.8vw;
-  margin: 0;
-  padding: 0;
+
+body{
+  width: 99vw;
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
-body {
-  width: 100%;
-  max-width: 100%;
-}
+
 
 .container {
-  width: 100vw;
+  width: 100%;
   height: 820px;
   display: flex;
   flex-direction: column;
@@ -25,33 +26,12 @@ body {
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: 1.2vw 11vh;
-  animation-name: zoom-out;
-  animation-duration: 1.5s;
-  animation-timing-function: ease-in-out;
-}
-
-@keyframes zoom-out {
-  from {
-    transform: scale3d(0.3, 0.3, 0.3);
-  }
-
-  80% {
-    transform: scale3d(1.3, 1.3, 1.3);
-  }
-
-  to {
-    transform: scale3d(1, 1, 1);
-  }
 }
 
 #animation-left {
   animation-name: slide-in-left;
   animation-duration: 1s;
   animation-timing-function: ease-in-out;
-}
-
-#animation-left:hover {
-  translate: 8px 8px;
 }
 
 #animation-right {
@@ -364,7 +344,10 @@ h4 {
   display: flex;
   justify-content: center;
 }
-
+.skills{
+  width: 90%;
+  margin: 0px auto;
+}
 .skills-container-grid .skills-container-each p {
   font-family: 'Inter', sans-serif;
   font-style: normal;
@@ -489,6 +472,13 @@ h4 {
   /* *{
     outline: red 1px solid !important;
   } */
+  html{
+    width: 98.7vw;
+    justify-content: center;
+  }
+  body{
+    width: 100%;
+  }
   #social-desktop {
     display: block;
   }
@@ -496,7 +486,9 @@ h4 {
   #social-mobile {
     display: none;
   }
-
+  #animation-left:hover {
+    translate: 8px 8px;
+  }
   .container {
     height: 1140px;
     background-image: url(images/Header-llustration-desktop.svg);
@@ -504,8 +496,26 @@ h4 {
     background-repeat: no-repeat;
     background-position: 0.2vw 0%;
     width: 100%;
+    animation-name: zoom-out;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-in-out;
   }
-
+  @keyframes zoom-out {
+    from {
+      transform: scale3d(0.3, 0.3, 0.3);
+    }
+  
+    80% {
+      transform: scale3d(1.3, 1.3, 1.3);
+    }
+  
+    to {
+      transform: scale3d(1, 1, 1);
+    }
+  }
+  .toolbar-container{
+    margin-top: 10px;
+  }
   .toolbar-icon {
     justify-content: center;
     align-items: center;
@@ -531,16 +541,18 @@ h4 {
   }
 
   .greeting {
-    margin-top: 150px;
+    margin-top: 100px;
   }
 
   .greeting .heading {
-    font-size: 48px;
+    font-size: 40px;
     line-height: 60px;
   }
-
+  .headline{
+    height: 450px;
+  }
   .headline .article {
-    width: 50vw;
+    width: 59vw;
     margin: 20px auto;
   }
 
@@ -574,7 +586,7 @@ h4 {
   }
 
   .about-me-container {
-    max-width: 100%;
+    width: 100%;
     height: 300px;
     margin-top: 150px;
     background-image: url(images/illustration-about\ me-1-desktop.svg), url(images/illustration-about-me-2-desktop.svg);
